botao engrenagem reajustado e NavLink active com css aplicado em conformidade

--- a/DD8-Blazor/Components/Layout/NavMenu.razor
+++ b/DD8-Blazor/Components/Layout/NavMenu.razor
@@ -1,8 +1,8 @@
 ﻿@using MudBlazor.Components
 
 <MudNavMenu>
-    <MudContainer Fluid="true" Elevation="1">
-        <MudGrid AlignItems="Center">
+    <MudContainer Fluid="true" Elevation="1" JustifyContent="Start" AlignItems="Center">
+        <MudGrid JustifyContent="Start" AlignItems="Center">
             <MudItem>
                 <MudLink Href="" Class="d-flex align-items-center">
                     <img class="img-brand" src="assets/images/logo.png" alt="logo DD8" />
@@ -28,35 +28,38 @@
             new { Href = "/support", Icon = "suporte.svg", Label = "HelpCenter" }
             })
             {
-                <MudListItem Class="wrap-text-item-menu">
-                    <MudNavLink Href="@item.Href" Match="NavLinkMatch.Prefix" Class="text-menu mud-nav-links">
-                        <img class="img-icons" src="assets/images/sidenav-icons/@item.Icon" />
-                        @item.Label
-                    </MudNavLink>
-                </MudListItem>
+                <MudNavLink Href="@item.Href" Match="NavLinkMatch.All" Class="text-menu mud-nav-links" ActiveClass="active-menu">
+                    <img class="img-icons" src="assets/images/sidenav-icons/@item.Icon" />
+                    @item.Label
+                </MudNavLink>
+
+
             }
         </MudList>
     </MudPaper>
+
+    <div class="span-content-menu"></div>
 
     <MudDivider Elevation="1" Class="divider-painel" />
 
     <!-- Seção do Usuário -->
     <MudGrid AlignItems="Center" JustifyContent="SpaceBetween" Class="grid-painel-admin">
-        <MudItem class="item-grid-painel">
+        <MudItem Class="item-grid-painel">
             <img src="assets/images/sidenav-icons/user-avatar.png" class="avatar-custom" />
         </MudItem>
-        <MudItem class="item-grid-painel">
+        <MudItem Class="item-grid-painel">
             <div>
                 <strong class="text-div">Admin DD8</strong>
                 <p class="text-div">admin@dd8.ai</p>
             </div>
         </MudItem>
-        <MudItem class="item-grid-painel">
-            <MudButton>
-                <img src="assets/images/sidenav-icons/parameter-icon.svg" class="icon-parameter" />
+        <MudItem Class="item-grid-painel mud-item-button">
+            <MudButton Class="mud-button-parameter">
+                <div class="icon-container">
+                    <img src="assets/images/sidenav-icons/parameter-icon.svg" class="icon-parameter" />
+                </div>
             </MudButton>
         </MudItem>
     </MudGrid>
+
 </MudNavMenu>
-
-
