button collapsar funcionando animacao

--- a/DD8-Blazor/Components/Layout/MainLayout.razor
+++ b/DD8-Blazor/Components/Layout/MainLayout.razor
@@ -1,7 +1,8 @@
 ﻿@inherits LayoutComponentBase
-<MudThemeProvider Theme="CustomTheme" />
-<MudPopoverProvider />
-<MudDialogProvider />
+<MudThemeProvider  @rendermode="InteractiveServer"  Theme="CustomTheme" />
+<MudPopoverProvider @rendermode="InteractiveServer" />
+<MudDialogProvider  @rendermode="InteractiveServer"  />
+<MudSnackbarProvider @rendermode="InteractiveServer" />
 
 <MudLayout>
 
