--- a/DD8-Blazor/Components/App.razor
+++ b/DD8-Blazor/Components/App.razor
@@ -15,9 +15,11 @@
 </head>
 
 <body>
-    <Routes />
+    <Routes @rendermode="InteractiveServer "/>
     <script src="_framework/blazor.web.js"></script>
-    <script src=@Assets["_content/MudBlazor/MudBlazor.min.js"]></script>
+    <!--<script src=@Assets["_content/MudBlazor/MudBlazor.min.js"]></script>-->
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+
 </body>
 
 </html>
