--- a/DD8-Blazor/Components/Layout/NavMenu.razor
+++ b/DD8-Blazor/Components/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿@using MudBlazor.Components
+﻿﻿@using MudBlazor.Components
 
 <MudNavMenu>
     <MudContainer Fluid="true" Elevation="1" JustifyContent="Start" AlignItems="Center">
@@ -63,3 +63,7 @@
     </MudGrid>
 
 </MudNavMenu>
+
+@code {
+    [Parameter] public bool IsCollapsed { get; set; }
+}
