botao ao ser clicado mantem o conteudo principal padrão e manipula só o menu com icones e textos

--- a/DD8-Blazor/Components/Layout/MainLayout.razor
+++ b/DD8-Blazor/Components/Layout/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
-<MudThemeProvider  @rendermode="InteractiveServer"  Theme="CustomTheme" />
+<MudThemeProvider @rendermode="InteractiveServer" Theme="CustomTheme" />
 <MudPopoverProvider @rendermode="InteractiveServer" />
-<MudDialogProvider  @rendermode="InteractiveServer"  />
+<MudDialogProvider @rendermode="InteractiveServer" />
 <MudSnackbarProvider @rendermode="InteractiveServer" />
 
 <MudLayout>
@@ -9,7 +9,8 @@
     <MudDrawerContainer>
 
         <!-- Menu Lateral -->
-        <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always">
+        <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always"
+            Class="@(_drawerOpen ? "menu-expanded" : "menu-collapsed")">
             <NavMenu />
         </MudDrawer>
 
