--- a/DD8-Blazor/Components/Layout/NavMenu.razor
+++ b/DD8-Blazor/Components/Layout/NavMenu.razor
@@ -1,21 +1,22 @@
 ﻿﻿@using MudBlazor.Components
 
 <MudNavMenu>
-    <MudContainer Fluid="true" Elevation="1" JustifyContent="Start" AlignItems="Center">
-        <MudGrid JustifyContent="Start" AlignItems="Center">
-            <MudItem>
-                <MudLink Href="" Class="d-flex align-items-center">
-                    <img class="img-brand" src="assets/images/logo.png" alt="logo DD8" />
-                    <div class="div-text-container">
-                        <strong class="text-div">Due Diligence Redefined</strong>
-                        <p class="text-div">Legal Expertise, AI-Powered</p>
-                    </div>
-                </MudLink>
-            </MudItem>
-            <MudItem class="item-grid-painel"></MudItem>
-        </MudGrid>
-        <MudDivider Class="divider-header" />
-    </MudContainer>
+   <MudContainer Fluid="true" Elevation="1" JustifyContent="Start" AlignItems="Center">
+    <MudGrid JustifyContent="Start" AlignItems="Center">
+        <MudItem>
+            <MudLink Href="" Class="mud-link">
+                <img class="img-brand" src="assets/images/logo.png" alt="logo DD8" />
+                <div class="div-text-container">
+                    <strong class="text-div">Due Diligence Redefined</strong>
+                    <p class="text-div">Legal Expertise, AI-Powered</p>
+                </div>
+            </MudLink>
+        </MudItem>
+        <MudItem class="item-grid-painel"></MudItem>
+    </MudGrid>
+    <MudDivider Class="divider-header" />
+</MudContainer>
+
 
     <!-- Menu de Navegação -->
     <MudPaper Elevation="0" Class="div-links">
