--- a/DD8-Blazor/wwwroot/css/NavMenu.css
+++ b/DD8-Blazor/wwwroot/css/NavMenu.css
@@ -1,7 +1,5 @@
-﻿﻿.mud-container--gutters {
-    padding-left: 10px;
-    padding-right: 0px;
-}
+﻿
+
 
 .text-div {
     font-size: 10px;
@@ -51,21 +49,23 @@
 .img-brand {
     width: 72px;
     height: 31px;
-    margin-right: 10px;
+    /*margin-right: 10px;*/
 }
 
 .div-text-container {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
+    flex-direction: column; /* Alinha os textos em coluna */
+    justify-content: center; /* Garante alinhamento vertical */
+    text-align: left; /* Alinha o texto à esquerda */
+    white-space: nowrap; /* Impede a quebra de linha nos textos */
 }
 
 .mud-link {
-    display: flex;
-    align-items: center;
-    gap: 8px;
+    display: flex; /* Garante que os itens fiquem lado a lado */
+    align-items: center; /* Centraliza os itens verticalmente */
+    gap: 10px; /* Espaço entre a logo e o texto */
+    white-space: nowrap; /* Impede a quebra de linha no texto */
+    overflow: hidden; /* Evita que o texto ultrapasse os limites */
 }
 
 .avatar-custom {
@@ -111,7 +111,7 @@
     width: 70%;
     display: inline-block;
     margin-left: 20px;
-    margin-bottom: -4px;
+    margin-bottom: 20px;
 }
 
 .divider-lateral {
@@ -138,11 +138,12 @@
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
     padding: 8px;
     font-size: 18px;
+    display:none;
 }
 
 .mud-nav-links {
     border-radius: 0 8px 8px 0;
-    padding: 10px;
+    padding: 30px;
     height: 48px;
     transition: border-left 0.3s, font-weight 0.3s;
 }
@@ -164,7 +165,7 @@
 }
 
 .span-content-menu {
-    height: 115px;
+    height: 65px;
 }
 
 .mud-grid-spacing-xs-6 {
@@ -218,6 +219,7 @@ aside {
     box-shadow: none !important;
 }
 
+
 .mud-main-content {
     margin-left: 240px; /* Sempre considerando o menu expandido */
     transition: margin-left 0.3s ease;
@@ -248,3 +250,4 @@ aside {
 .menu-expanded .mud-nav-links .text-menu {
     display: flex;
 }
+
